# local-model-manager

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  ROADMAP.md  V1_CHECKLIST.md  pyproject.toml
assets/: SCREENSHOTS.md
docs/: 2026-06-14-gguf-discovery.md
src/lmm/: __init__.py  api.py  cli.py  daemon_client.py  daemonconfig.py  deploy.py  discovery.py  fitcheck.py  gguf.py  hardware.py  health.py  hermes.py  llama.py  logtail.py  memory.py  models.py  net.py  ports.py  process.py  recommend.py  server.py  state.py
src/lmm/webui/: api.js  app.js  index.html  styles.css
tests/: conftest.py  fake_llama.py  test_api_auth.py  test_api_bind.py  test_api_bodies.py  test_api_connection_info.py  test_api_lifecycle.py  test_api_read.py  test_api_static.py  test_api_stream.py  test_apikey_wiring.py  test_cli.py  test_cli_bind.py  test_cli_daemon.py  test_cli_daemon_client.py  test_cli_install.py  test_cli_recommend.py  test_cli_serve.py  test_cli_service.py  test_command_builder_apikey.py  test_daemon_client.py  test_daemonconfig.py  test_deploy.py  test_discovery.py  test_fitcheck.py  test_gguf.py  test_hardware.py  test_health.py  test_hermes_bind.py  test_hermes_profiles.py  test_hermes_unbind.py  test_llama.py  test_logtail.py  test_memory.py  test_models.py  test_net.py  test_ports.py  test_process.py  test_recommend.py  test_recommend_apikey.py  (+6 more)
