[project]
name = "local-model-manager"
version = "0.0.1"
description = "Manage local llama.cpp model servers and bind agents to them"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
lmm = "lmm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lmm"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.4"]
